fix(system): EXP-86 G2-TAIL 子树缓存代际协调防尾随 put
以 generation 协调 cache-aside：写提交后 bump+clear；读路径去掉
@Cacheable，load 前记录 gen、putIfGeneration 拒绝过期写入，hit 时
gen 不一致视为 miss。确定性 latch 测构造 miss→旧库→W commit→尾随 put。
F1 与 mid-tx 不 evict 保持。

Co-authored-by: multica-agent <github@multica.ai>